--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/irnatural/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/irnatural/assets/index.af197f5f.js"></script>
-    <link rel="modulepreload" href="/irnatural/assets/vendor.270d54bb.js">
+    <script type="module" crossorigin src="/irnatural/assets/index.d72291e9.js"></script>
+    <link rel="modulepreload" href="/irnatural/assets/vendor.7d1a7e03.js">
     <link rel="stylesheet" href="/irnatural/assets/index.e697d787.css">
-  </head>
+  <link rel="manifest" href="/irnatural/manifest.webmanifest"></head>
   <body>
     <div id="root"></div>
     
