--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/irnatural/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/jpg" href="/irnatural/assets/Logo.665c8f8f.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/irnatural/assets/index.3be79d05.js"></script>
+    <title>IR Cosmetica Natural</title>
+    <script type="module" crossorigin src="/irnatural/assets/index.f1b6c94b.js"></script>
     <link rel="modulepreload" href="/irnatural/assets/vendor.7d1a7e03.js">
-    <link rel="stylesheet" href="/irnatural/assets/index.e697d787.css">
+    <link rel="stylesheet" href="/irnatural/assets/index.72b53e7c.css">
   <link rel="manifest" href="/irnatural/manifest.webmanifest"></head>
   <body>
     <div id="root"></div>
